reorganized js files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <link type="text/css" rel="stylesheet" media="all" href="css/jquery-ui/themes/ui-lightness/jquery-ui.css" /> 
     <script type="text/javascript" src="js/jquery/jquery.js"></script>
     <script type="text/javascript" src="js/jquery/jquery-ui.js"></script>
-    <script type="text/javascript" src="js/taskbook.js"></script>
+    <script type="text/javascript" src="js/utils.js"></script>
+    <script type="text/javascript" src="js/task.js"></script>
+    <script type="text/javascript" src="js/view.js"></script>
+    <script type="text/javascript" src="js/book.js"></script>
+    <script type="text/javascript" src="js/controller.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </head>
   
   <body>
@@ -48,7 +53,7 @@
       </div>
     </div>
   
-    <textArea id="taskDump" onclick="this.select();return false"></textArea>
+    <textarea id="taskDump"></textarea>
     <button id="loadButton">Load</button>
   </body>
 </html>
