show start date instead of create date

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button id="addButton">Add</button>
         <table id="taskList">
           <tr class="task template">
-            <td class="createDate"></td>
+            <td class="startDate"></td>
             <td class="goal"></td>
             <td class="dueDate"></td>
           </tr>
