Make Collection.Item class. Add Collection unit tests

--- a/test/index.html
+++ b/test/index.html
@@ -12,6 +12,7 @@
     <script src="../src/js/task.js" type="text/javascript" charset="utf-8"></script>
     
     <script src="unit/index_tests.js" type="text/javascript" charset="utf-8"></script>
+    <script src="unit/collection_tests.js" type="text/javascript" charset="utf-8"></script>
     <script src="unit/book_tests.js" type="text/javascript" charset="utf-8"></script>
   </head>
   
