Add action field to taskpop with hint. Not wired up yet.

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <link type="text/css" rel="stylesheet" media="all" href="css/jquery-ui/themes/ui-lightness/jquery-ui.css" /> 
     <script type="text/javascript" src="js/jquery/jquery.js"></script>
     <script type="text/javascript" src="js/jquery/jquery-ui.js"></script>
+    <script type="text/javascript" src="js/jquery/jquery.hint.js"></script>
     <script type="text/javascript" src="js/utils.js"></script>
     <script type="text/javascript" src="js/collection.js"></script>
     <script type="text/javascript" src="js/task.js"></script>
@@ -61,6 +62,7 @@
   
     <div id="taskPopup">
       <span class="startDate"></span>
+      <input class="action" type="text" prompt="Action" title="Action"/>
       <button id="completedButton"></button>
       <button id="deleteButton">Delete</button>
       <span class="dueDate"></span>
