Action field working

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
     <link type="text/css" rel="stylesheet" media="all" href="css/jquery-ui/themes/ui-lightness/jquery-ui.css" /> 
     <script type="text/javascript" src="js/jquery/jquery.js"></script>
     <script type="text/javascript" src="js/jquery/jquery-ui.js"></script>
-    <script type="text/javascript" src="js/jquery/jquery.hint.js"></script>
     <script type="text/javascript" src="js/utils.js"></script>
     <script type="text/javascript" src="js/collection.js"></script>
     <script type="text/javascript" src="js/task.js"></script>
@@ -44,7 +43,7 @@
           <h3>Actions</h3>
           <table id="actionList">
             <tr class="task template">
-              <td class="goal"></td>
+              <td class="displayString"></td>
             </tr>
           </table>
         </div>
