Can edit goal. Goal displays with action.

--- a/src/index.html
+++ b/src/index.html
@@ -60,10 +60,12 @@
     </div>
   
     <div id="taskPopup">
-      <span class="startDate"></span>
-      <input class="action" type="text" prompt="Action" title="Action"/>
+      <input class="action" type="text" title="Action" />
       <button id="completedButton"></button>
       <button id="deleteButton">Delete</button>
+      <br/>
+      <span class="startDate"></span>
+      <input class="goal" type="text" title="Goal" />
       <span class="dueDate"></span>
     </div>
     
