Split out qapp files

--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,14 @@
     <link type="text/css" rel="stylesheet" media="all" href="css/jquery-ui/themes/ui-lightness/jquery-ui.css" /> 
     <script type="text/javascript" src="js/jquery/jquery.js"></script>
     <script type="text/javascript" src="js/jquery/jquery-ui.js"></script>
-    <script type="text/javascript" src="js/utils.js"></script>
-    <script type="text/javascript" src="js/collection.js"></script>
-    <script type="text/javascript" src="js/task.js"></script>
-    <script type="text/javascript" src="js/view.js"></script>
-    <script type="text/javascript" src="js/book.js"></script>
-    <script type="text/javascript" src="js/controller.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/qapp/utils.js"></script>
+    <script type="text/javascript" src="js/qapp/collection.js"></script>
+    <script type="text/javascript" src="js/qapp/view.js"></script>
+    <script type="text/javascript" src="js/app/task.js"></script>
+    <script type="text/javascript" src="js/app/tasks_view.js"></script>
+    <script type="text/javascript" src="js/app/task_book.js"></script>
+    <script type="text/javascript" src="js/app/controller.js"></script>
+    <script type="text/javascript" src="js/app/main.js"></script>
   </head>
   
   <body>
