--- a/test/index.html
+++ b/test/index.html
@@ -6,10 +6,10 @@
     
     <script type="text/javascript" src="../src/js/jquery/jquery.js"></script>
     <script type="text/javascript" src="qunit/qunit.js"></script>
-    <script src="../src/js/utils.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../src/js/collection.js" type="text/javascript" ></script>
-    <script src="../src/js/book.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../src/js/task.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="../src/js/qapp/utils.js"></script>
+    <script type="text/javascript" src="../src/js/qapp/collection.js"></script>
+    <script type="text/javascript" src="../src/js/app/task.js"></script>
+    <script type="text/javascript" src="../src/js/app/task_book.js"></script> 
     
     <script src="unit/index_tests.js" type="text/javascript" charset="utf-8"></script>
     <script src="unit/collection_tests.js" type="text/javascript" charset="utf-8"></script>
